Fix: align folder info with folder data

--- a/public/styles/share.css
+++ b/public/styles/share.css
@@ -114,11 +114,13 @@ dialog {
 
 .folders-info {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
   background-color: #96c68e;
   padding: 1rem;
   border-radius: 3px;
   font-weight: 500;
+  justify-items: center;
 }
 
 .folders {
@@ -135,11 +137,13 @@ dialog {
 
 .folder {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
   padding: 1rem;
   background-color: #d2f3ca;
   border-radius: 3px;
   align-items: center;
+  justify-items: center;
 }
 
 .folder > a {
